Fixes who we are img alignment

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -25,7 +25,6 @@
   }
   .img_block {
     display: flex;
-    flex-wrap: wrap;
     justify-content: flex-end;
     gap: 1rem;
     img {
